@@ -194,6 +194,9 @@
            <property name="decimals" >
             <number>0</number>
            </property>
+           <property name="minimum" >
+            <double>0.000000000000000</double>
+           </property>
            <property name="maximum" >
             <double>99999.000000000000000</double>
            </property>
@@ -217,6 +220,9 @@
           <widget class="QDoubleSpinBox" name="UpperZoomBoundary" >
            <property name="decimals" >
             <number>0</number>
+           </property>
+           <property name="minimum" >
+            <double>0.000000000000000</double>
            </property>
            <property name="maximum" >
             <double>99999.000000000000000</double>
