@@ -244,15 +244,15 @@
  <selector expr="[place] is city"/>
 </painter>
 <painter
- zoomUnder="0.142857" zoomUpper="1e+07"
+ zoomUnder="0" zoomUpper="1e+07"
  icon=":/MapIcons/map-icons/square.small/misc/information.png"
  drawTrafficDirectionMarks="no">
-  <selector expr="Type is TrackPoint and HasTags"/>
+  <selector expr="[Default] Type is TrackPoint and HasTags"/>
 </painter>
 <painter
- zoomUnder="0.142857" zoomUpper="1e+07"
+ zoomUnder="0" zoomUpper="1e+07"
  icon=":/MapIcons/map-icons/square.small/unknown.png"
  drawTrafficDirectionMarks="no">
-  <selector expr="Type is TrackPoint"/>
+  <selector expr="Type is TrackPoint and not HasTags"/>
 </painter>
 </mapStyle>
